--- a/engine/package.json
+++ b/engine/package.json
@@ -12,5 +12,9 @@
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "tsx": "^4.20.6"
+  },
+  "scripts": {
+    "build": "tsc",
+    "prod": "node ./dist/server.js"
   }
 }
