--- a/signer/.env.example
+++ b/signer/.env.example
@@ -6,3 +6,4 @@ PORT=3000
 
 POLYGON_AMOY_RPC_URL="https://polygon-amoy.g.alchemy.com/v2/Hq3TrI_p9vm6iYnmwiczU"
 SEPOLIA_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/Hq3TrI_p9vm6iYnmwiczU"
+ONE_INCH_API_KEY=""
