--- a/signer/package.json
+++ b/signer/package.json
@@ -4,12 +4,15 @@
   "description": "Signer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx ./example/oneinchSigner.example.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
+    "tsx": "^4.20.6",
     "viem": "^2.37.8"
   }
 }
