--- a/signer/package.json
+++ b/signer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@1inch/limit-order-sdk": "^5.2.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "tsx": "^4.20.6",
