--- a/engine/package.json
+++ b/engine/package.json
@@ -10,6 +10,7 @@
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "ethers": "5.7.2",
     "expr-eval": "^2.0.2",
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
