--- a/signer/package.json
+++ b/signer/package.json
@@ -4,7 +4,7 @@
   "description": "Signer",
   "main": "index.js",
   "scripts": {
-    "test": "tsx ./workflowbuilders/assetSender.ts"
+    "test": "tsx ./example/oneinchLimitOrder.example.ts"
   },
   "keywords": [],
   "author": "",
