--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@effect/schema": "^0.75.5",
     "@graphprotocol/grc-20": "^0.25.2",
+    "@graphprotocol/hypergraph-react": "^0.7.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.2",
