--- a/engine/package.json
+++ b/engine/package.json
@@ -6,7 +6,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@1inch/limit-order-sdk": "^5.2.0",
+    "@1inch/limit-order-sdk": "5.0.5",
     "@pythnetwork/hermes-client": "^2.0.0",
     "@pythnetwork/pyth-sdk-solidity": "^4.2.0",
     "@types/cors": "^2.8.19",
