feat: Add Dockerfile for containerization and update package.json scripts

--- a/engine/package.json
+++ b/engine/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "prod": "node ./dist/server.js",
+    "start": "node ./dist/server.js",
+    "dev": "tsx ./src/server.ts",
     "test": "tsx ./src/server.ts"
   }
 }
