--- a/engine/tsconfig.json
+++ b/engine/tsconfig.json
@@ -13,7 +13,7 @@
     //"types": [],
     // For nodejs:
     "lib": ["esnext"],
-    "types": ["node"],
+    // "types": ["node"], // Commented out to allow all installed @types packages
     // and npm install -D @types/node
 
     // Other Outputs
